--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <!-- HOME ICON -->
                     <i class="fa fa-home" aria-hidden="true"></i>
                 </button>
-                <button id="m-open-profile-btn" style="border-top: none; border-bottom: 1px solid #eee;">
+                <button id="m-open-profile-btn" style="border-top: none; border-bottom: 1px solid #ddd;">
                     <!-- PROFILE ICON -->
                     <i class="fa fa-user" aria-hidden="true"></i>
                 </button>
