--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
                 <li>
                     Профиль <strong class="context">Ctrl + P</strong>
                 </li>
-                <li class="hidden">
-                    Открыть консоль <strong class="context">F7</strong>
+                <li>
+                    Консоль <strong class="context">F7</strong>
                 </li>
             </ul>
         </div>
