--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <p>
                     Инструкция по настрйке уведомлений от
                     вашего телеграм бота вы можете получить
-                    <a style="color: royalblue; text-decoration: none;" href="https://github.com/yagop/node-telegram-bot-api/tree/master/doc" target="_blank" title="https://github.com/yagop/node-telegram-bot-api/tree/master/doc">здесь</a>.
+                    <a style="color: royalblue; text-decoration: none;" href="https://github.com/hosein2398/node-telegram-bot-api-tutorial" target="_blank" title="https://github.com/yagop/node-telegram-bot-api/tree/master/doc">здесь</a>.
                     <br>
                     <br>
                     Настроить уведомления можно в настройках
@@ -343,7 +343,7 @@
                     Дата регистрации<strong class="context" id="user-were-created">N/A</strong>
                 </li>
                 <li>
-                    Получить <a href="https://github.com/yagop/node-telegram-bot-api/tree/master/doc" title="https://github.com/yagop/node-telegram-bot-api/tree/master/doc" target="_blank" title="https://vkhost.github.io/">Telegram</a> токен <strong class="context" id="user-telegram-token">N/A</strong>
+                    Получить <a href="https://github.com/hosein2398/node-telegram-bot-api-tutorial" target="_blank" title="https://vkhost.github.io/">Telegram</a> токен <strong class="context" id="user-telegram-token">N/A</strong>
                     <input type="text" placeholder="oauth token" id="oauth-vk-token">
                     <span class="load-oauth-save">Сохранено</span>
                 </li>
